--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/fonts/style.css">
     <link rel="stylesheet" href="css/fonts/georgia/georgia-regular.ttf">
+    <link rel="stylesheet" href="css/fonts/arial/arial-regular.ttf">
 </head>
 <body>
     <main>
@@ -16,19 +16,21 @@
             <div class="container">
                 <div class="header__up">
                     <div class="header__logo">
-                        <h1 class="logo__up">
-                            Cozy House
-                        </h1>
-                        <p>
-                            Shelter for pets in Boston
-                        </p>
+                        <a href="index.html">
+                            <h1 class="logo__up">
+                                Cozy House
+                            </h1>
+                            <p class="logo__bottom">
+                                Shelter for pets in Boston
+                            </p>
+                        </a>
                     </div>
                     <div class="header__nav-bar">
                         <ul class="nav-bar__items">
-                            <li class="li__item"><a href="#" class="nav-bar__item">About the shelter</a></li>
+                            <li class="li__item"><a href="index.html" class="nav-bar__item first">About the shelter</a></li>
                             <li class="li__item"><a href="#" class="nav-bar__item">Our pets</a></li>
-                            <li class="li__item"><a href="#" class="nav-bar__item">Help the shelter</a></li>
-                            <li class="li__item"><a href="#" class="nav-bar__item reset">Contacts</a></li>
+                            <li class="li__item"><a href="#help" class="nav-bar__item">Help the shelter</a></li>
+                            <li class="li__item"><a href="#footer" class="nav-bar__item reset">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
@@ -41,7 +43,7 @@
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </div>
                         <div class="header__button">
-                            <a href="#" class="header__button-link">
+                            <a href="#our-friends" class="header__button-link">
                                 Make a friend
                             </a>
                         </div>
@@ -52,7 +54,228 @@
                 </div>
             </div>
         </section>
-    </main>    
+        <section class="about">
+            <div class="container">
+                <div class="about__wrapper">
+                    <div class="about__left">
+                        <img src="img/about__dog.png" alt="">
+                    </div>
+                    <div class="about__right">
+                        <h3 class="about__title">
+                            About the shelter<br> “Cozy House”
+                        </h3>
+                        <div class="about__first-text text">
+                            Currently we have 121 dogs and 342 cats on our hands and<br>
+                             statistics show that only 20% of them will find a family. The<br>
+                             others will continue to live with us and will be waiting for a lucky<br>
+                              chance to become dearly loved.
+                        </div>
+                        <div class="about__second-text text">
+                            We feed our wards with the best food and make sure that they<br>
+                             do not get sick, feel comfortable (including psychologically) and<br>
+                              well. We are supported by 87 volunteers and 28 employees of<br>
+                               various skill levels. About 12% of the animals are taken by the<br>
+                                shelter staff. Taking care of the animals, they become attached<br>
+                                to the pets and would hardly ever leave them alone.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="our-friends" id="our-friends">
+            <div class="container">
+                <h3 class="our-friends__title">
+                    Our friends who<br>
+                    are looking for a house
+                </h3>
+                <div class="our-friends__slider">
+                    <div class="arrow-right">
+                        <img src="img/Arrow-left.png" alt="">
+                    </div>
+                    <div class="arrow-left">
+                        <img src="img/Arrow-left.png" alt="">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/slider/slider__elem-cat.png" alt="">
+                        <p class="slider__name">
+                            Katrine
+                        </p>
+                        <div class="slider__button-wrapper">
+                            <a href="#" class="slider__button">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/slider/slider__elem-cat.png" alt="">
+                        <p class="slider__name">
+                            Katrine
+                        </p>
+                        <div class="slider__button-wrapper">
+                            <a href="#" class="slider__button">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/slider/slider__elem-cat.png" alt="">
+                        <p class="slider__name">
+                            Katrine
+                        </p>
+                        <div class="slider__button-wrapper">
+                            <a href="#" class="slider__button">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="our-friends__button">
+                    <a href="#" class="our-friends__button-custom">Get to know the rest</a>
+                </div>
+            </div>
+        </section>
+        <section class="help" id="help">
+            <div class="container">
+                <h3 class="help__title">
+                    How you can help<br>
+                    our shelter
+                </h3>
+                <div class="help__grid-items">
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/1.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Pet food
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/2.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Transportation
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/3.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Toys
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/4.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Bowls and cups
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/5.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Shampoos
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/6.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Vitamins
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/7.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Medicines
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/8.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Collars / leashes
+                        </div>
+                    </div>
+                    <div class="help__grid-item">
+                        <div class="help__item">
+                            <img src="img/grid__items/9.png" alt="">
+                        </div>
+                        <div class="help__text">
+                            Sleeping areas
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="addition">
+            <div class="container">
+                <div class="addition__wrapper">
+                    <div class="addition__left">
+                        <img src="img/donation__dog.png" alt="">
+                    </div>
+                    <div class="addition__right">
+                        <h3 class="addition__title">
+                            You can also<br>
+                             make a donation
+                        </h3>
+                        <div class="addition__bank-name">
+                            Name of the bank / Type of bank account
+                        </div>
+                        <div class="addition__card-number">
+                            <img src="img/credit-card.png" alt="">
+                            <a href="##" class="credit-card">8380 2880 8028 8791 7435</a>
+                        </div>
+                        <div class="addition__bottom">
+                            Legal information and lorem ipsum dolor sit amet, consectetur<br>
+                             adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac<br>
+                              diam. Praesent ultrices maximus tortor et vulputate. Interdum et<br>
+                               malesuada fames ac ante ipsum primis in faucibus.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>   
+    <footer>
+        <div class="footer__container" id="footer">
+            <div class="container">
+                <div class="footer__wrapper">
+                    <div class="footer__left">
+                        <h3 class="footer__left-title">
+                            For questions<br> and suggestions
+                        </h3>
+                        <div class="footer__left-email">
+                            <a href="mailto:email@shelter.com"><img src="img/footer/mail.png" alt=""></a>
+                            <a href="mailto:email@shelter.com" class="footer__mail">email@shelter.com</a>
+                        </div>
+                        <div class="footer__left-phone">
+                            <a href="tel:+136745677554"><img src="img/footer/phone.png" alt=""></a>
+                            <a href="tel:+136745677554" class="footer__phone-number">+13 674 567 75 54</a>
+                        </div>
+                    </div>
+                    <div class="footer__center">
+                        <h3 class="footer__left-title">
+                            We are waiting<br> for your visit
+                        </h3>
+                        <div class="footer__center-location">
+                            <a href="https://www.google.com.ua/maps/place/36179+%D0%91%D0%B5%D0%B1%D1%80%D0%B0,+%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D1%8F/@50.9766689,9.7423134,12z/data=!3m1!4b1!4m5!3m4!1s0x47a4aa35ad3b3069:0x822942ff510ea21d!8m2!3d50.9688842!4d9.7973417?hl=ru"><img src="img/footer/pin.png" alt=""></a>
+                            <a href="https://www.google.com.ua/maps/place/36179+%D0%91%D0%B5%D0%B1%D1%80%D0%B0,+%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D1%8F/@50.9766689,9.7423134,12z/data=!3m1!4b1!4m5!3m4!1s0x47a4aa35ad3b3069:0x822942ff510ea21d!8m2!3d50.9688842!4d9.7973417?hl=ru" class="footer__location">1 Central Street, Boston<br> (entrance from the store)</a>
+                        </div>
+                        <div class="footer__center-location">
+                            <a href="https://www.google.com.ua/maps/place/36179+%D0%91%D0%B5%D0%B1%D1%80%D0%B0,+%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D1%8F/@50.9766689,9.7423134,12z/data=!3m1!4b1!4m5!3m4!1s0x47a4aa35ad3b3069:0x822942ff510ea21d!8m2!3d50.9688842!4d9.7973417?hl=ru"><img src="img/footer/pin.png" alt=""></a>
+                            <a href="https://www.google.com.ua/maps/place/36179+%D0%91%D0%B5%D0%B1%D1%80%D0%B0,+%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D1%8F/@50.9766689,9.7423134,12z/data=!3m1!4b1!4m5!3m4!1s0x47a4aa35ad3b3069:0x822942ff510ea21d!8m2!3d50.9688842!4d9.7973417?hl=ru" class="footer__location">18 South Park, London </a>
+                        </div>
+                    </div>
+                    <div class="footer__right">
+                        <img src="img/footer/footer__dog.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer> 
 <script src="js/script.js"></script>
 </body>
 </html>
