feat: add Our Pets page

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -28,7 +28,7 @@
                     <div class="header__nav-bar">
                         <ul class="nav-bar__items">
                             <li class="li__item"><a href="index.html" class="nav-bar__item first">About the shelter</a></li>
-                            <li class="li__item"><a href="#" class="nav-bar__item">Our pets</a></li>
+                            <li class="li__item"><a href="../pets/Our Pets.html" class="nav-bar__item">Our pets</a></li>
                             <li class="li__item"><a href="#help" class="nav-bar__item">Help the shelter</a></li>
                             <li class="li__item"><a href="#footer" class="nav-bar__item reset">Contacts</a></li>
                         </ul>
@@ -105,18 +105,18 @@
                         </div>
                     </div>
                     <div class="slider__item">
-                        <img src="img/slider/slider__elem-cat.png" alt="">
+                        <img src="img/slider/slider__elem-dog.png" alt="">
                         <p class="slider__name">
-                            Katrine
+                            Jennifer
                         </p>
                         <div class="slider__button-wrapper">
                             <a href="#" class="slider__button">Learn more</a>
                         </div>
                     </div>
                     <div class="slider__item">
-                        <img src="img/slider/slider__elem-cat.png" alt="">
+                        <img src="img/slider/slider__elem-dog2.png" alt="">
                         <p class="slider__name">
-                            Katrine
+                            Woody
                         </p>
                         <div class="slider__button-wrapper">
                             <a href="#" class="slider__button">Learn more</a>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="our-friends__button">
-                    <a href="#" class="our-friends__button-custom">Get to know the rest</a>
+                    <a href="../pets/Our Pets.html" class="our-friends__button-custom">Get to know the rest</a>
                 </div>
             </div>
         </section>
