--- a/shelter/pages/pets/Our Pets.html
+++ b/shelter/pages/pets/Our Pets.html
@@ -13,6 +13,9 @@
 <body>
     <main>
         <section class="header header__pets">
+            <div class="burger">
+                <span class="burger-line"></span> 
+             </div>
             <div class="container">
                 <div class="header__up">
                     <div class="header__logo">
@@ -29,12 +32,15 @@
                         <ul class="nav-bar__items">
                             <li class="li__item "><a href="../main/index.html" class="nav-bar__item pets-li__item">About the shelter</a></li>
                             <li class="li__item "><a href="#" class="nav-bar__item pets-li__item first">Our pets</a></li>
-                            <li class="li__item "><a href="../main/index.html#help" class="nav-bar__item pets-li__item">Help the shelter</a></li>
-                            <li class="li__item "><a href="#footer" class="nav-bar__item pets-li__item reset">Contacts</a></li>
+                            <li class="li__item close-burger"><a href="../main/index.html#help" class="nav-bar__item pets-li__item">Help the shelter</a></li>
+                            <li class="li__item close-burger"><a href="#footer" class="nav-bar__item pets-li__item reset">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="wrapper-grey hidden">
+
         </section>
         <section class="our-friends pets__our-friends" id="our-friends">
                 <div class="container">
@@ -138,7 +144,7 @@
         <div class="footer__container" id="footer">
             <div class="container">
                 <div class="footer__wrapper">
-                    <div class="footer__left">
+                    <div class="footer__left footer__item">
                         <h3 class="footer__left-title">
                             For questions<br> and suggestions
                         </h3>
@@ -151,7 +157,7 @@
                             <a href="tel:+136745677554" class="footer__phone-number">+13 674 567 75 54</a>
                         </div>
                     </div>
-                    <div class="footer__center">
+                    <div class="footer__center footer__item">
                         <h3 class="footer__left-title">
                             We are waiting<br> for your visit
                         </h3>
@@ -164,7 +170,7 @@
                             <a href="https://www.google.com.ua/maps/place/36179+%D0%91%D0%B5%D0%B1%D1%80%D0%B0,+%D0%93%D0%B5%D1%80%D0%BC%D0%B0%D0%BD%D0%B8%D1%8F/@50.9766689,9.7423134,12z/data=!3m1!4b1!4m5!3m4!1s0x47a4aa35ad3b3069:0x822942ff510ea21d!8m2!3d50.9688842!4d9.7973417?hl=ru" class="footer__location">18 South Park, London </a>
                         </div>
                     </div>
-                    <div class="footer__right">
+                    <div class="footer__right footer__item">
                         <img src="img/footer__dog.png" alt="">
                     </div>
                 </div>
