fix: problem with display slider

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -137,39 +137,41 @@
                     are looking for a house
                 </h3>
                 <div class="our-friends__slider">
+                    <div class="slider__wrapper">
+                        <div class="slider__item">
+                            <img src="img/slider/slider__elem-cat.png" alt="">
+                            <p class="slider__name">
+                                Katrine
+                            </p>
+                            <div class="slider__button-wrapper">
+                                <a href="#" class="slider__button">Learn more</a>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <img src="img/slider/slider__elem-dog.png" alt="">
+                            <p class="slider__name">
+                                Jennifer
+                            </p>
+                            <div class="slider__button-wrapper">
+                                <a href="#" class="slider__button">Learn more</a>
+                            </div>
+                        </div>
+                        <div class="slider__item">
+                            <img src="img/slider/slider__elem-dog2.png" alt="">
+                            <p class="slider__name">
+                                Woody
+                            </p>
+                            <div class="slider__button-wrapper">
+                                <a href="#" class="slider__button">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="arrow__wrapper">
                         <div class="arrow-right">
                             <img src="img/Arrow-left.png" alt="">
                         </div>
                         <div class="arrow-left">
                             <img src="img/Arrow-left.png" alt="">
-                        </div>
-                    </div>
-                    <div class="slider__item">
-                        <img src="img/slider/slider__elem-cat.png" alt="">
-                        <p class="slider__name">
-                            Katrine
-                        </p>
-                        <div class="slider__button-wrapper">
-                            <a href="#" class="slider__button">Learn more</a>
-                        </div>
-                    </div>
-                    <div class="slider__item">
-                        <img src="img/slider/slider__elem-dog.png" alt="">
-                        <p class="slider__name">
-                            Jennifer
-                        </p>
-                        <div class="slider__button-wrapper">
-                            <a href="#" class="slider__button">Learn more</a>
-                        </div>
-                    </div>
-                    <div class="slider__item">
-                        <img src="img/slider/slider__elem-dog2.png" alt="">
-                        <p class="slider__name">
-                            Woody
-                        </p>
-                        <div class="slider__button-wrapper">
-                            <a href="#" class="slider__button">Learn more</a>
                         </div>
                     </div>
                 </div>
