fix: block layout

--- a/shelter/pages/pets/Our Pets.html
+++ b/shelter/pages/pets/Our Pets.html
@@ -45,7 +45,7 @@
         <section class="our-friends pets__our-friends" id="our-friends">
                 <div class="container">
                     <h3 class="our-friends__title">
-                        Our friends who<br>
+                        Our friends who
                         are looking for a house
                     </h3>
                     <div class="pets__gallery">
