--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -16,7 +16,7 @@
             <div class="burger">
                 <span class="burger-line"></span> 
              </div>
-            <div class="container">
+            <div class="container burger__container">
                 <div class="header__up">
                     <div class="header__logo">
                         <a href="index.html">
@@ -106,24 +106,24 @@
             <div class="container">
                 <div class="about__wrapper">
                     <div class="about__left">
-                        <img src="img/about__dog.png" alt="">
+                        <img src="img/about__dog.png" class="about__left-img" alt="">
                     </div>
                     <div class="about__right">
                         <h3 class="about__title">
-                            About the shelter “Cozy House”
+                            About the shelter<br> “Cozy House”
                         </h3>
                         <div class="about__first-text text">
-                            Currently we have 121 dogs and 342 cats on our hands and<br>
-                             statistics show that only 20% of them will find a family. The<br>
-                             others will continue to live with us and will be waiting for a lucky<br>
+                            Currently we have 121 dogs and 342 cats on our hands and
+                             statistics show that only 20% of them will find a family. The
+                             others will continue to live with us and will be waiting for a lucky
                               chance to become dearly loved.
                         </div>
                         <div class="about__second-text text">
-                            We feed our wards with the best food and make sure that they<br>
-                             do not get sick, feel comfortable (including psychologically) and<br>
-                              well. We are supported by 87 volunteers and 28 employees of<br>
-                               various skill levels. About 12% of the animals are taken by the<br>
-                                shelter staff. Taking care of the animals, they become attached<br>
+                            We feed our wards with the best food and make sure that they
+                             do not get sick, feel comfortable (including psychologically) and
+                              well. We are supported by 87 volunteers and 28 employees of
+                               various skill levels. About 12% of the animals are taken by the
+                                shelter staff. Taking care of the animals, they become attached
                                 to the pets and would hardly ever leave them alone.
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                 <div class="our-friends__slider">
                     <div class="slider__wrapper">
                         <div class="slider__item">
-                            <img src="img/slider/slider__elem-cat.png" alt="">
+                            <img src="img/slider/slider__elem-cat.png" class="slider__item-custom" alt="">
                             <p class="slider__name">
                                 Katrine
                             </p>
@@ -183,7 +183,7 @@
         <section class="help" id="help">
             <div class="container help__title-container">
                 <h3 class="help__title">
-                    How you can help
+                    How you can help<br>
                     our shelter
                 </h3>
                 <div class="help__grid-items">
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="addition__wrapper">
                     <div class="addition__left">
-                        <img src="img/donation__dog.png" alt="">
+                        <img src="img/donation__dog.png" class="addition__img-custom" alt="">
                     </div>
                     <div class="addition__right">
                         <h3 class="addition__title">
@@ -281,9 +281,9 @@
                             <a href="##" class="credit-card">8380 2880 8028 8791 7435</a>
                         </div>
                         <div class="addition__bottom">
-                            Legal information and lorem ipsum dolor sit amet, consectetur<br>
-                             adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac<br>
-                              diam. Praesent ultrices maximus tortor et vulputate. Interdum et<br>
+                            Legal information and lorem ipsum dolor sit amet, consectetur
+                             adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac
+                              diam. Praesent ultrices maximus tortor et vulputate. Interdum et
                                malesuada fames ac ante ipsum primis in faucibus.
                         </div>
                     </div>
